--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -9,13 +9,11 @@ sort: original
 ...
 
 了	a
+的时候	a
 ①	a
-②	a
 什么	a
-今天	a
+但是	a
 候	aa
-你们	aa
-他们	aa
 任何	aa
 到了	aa
 羴	aaa
@@ -260,8 +258,6 @@ sort: original
 侦	afz
 侦	afzb
 何	ag
-他的	ag
-你的	ag
 伯	agb
 伯	agbr
 侲	agc
@@ -515,6 +511,7 @@ sort: original
 酓	akyj
 韽	akyy
 着	al
+你们	al
 了	ala
 偓	alai
 偅	alb
@@ -1006,6 +1003,7 @@ sort: original
 贷	atz
 贷	atzb
 便	au
+今天	au
 俹	aua
 僫	auag
 傌	auan
@@ -1242,7 +1240,6 @@ sort: original
 儨	azz
 儨	azzm
 里	b
-①	b
 ①	b
 月	b
 应该	b
@@ -1651,7 +1648,6 @@ sort: original
 脄	bknf
 庾	bknr
 腴	bknr
-穴	bkp
 穴	bkp
 脖	bkph
 胈	bkq
@@ -2224,7 +2220,6 @@ sort: original
 廐	bzu
 廐	bzuu
 几	c
-①	c
 ①	c
 种	c
 几个	c
@@ -4851,8 +4846,8 @@ sort: original
 时候	f
 出来	f
 题	fa
-遇到	fa
 得到	fa
+遇到	fa
 最差	fa
 峳	faa
 迧	faak
@@ -7190,8 +7185,9 @@ sort: original
 赖	gmz
 赖	gmzb
 并	gn
-就会	gn
+整个	gn
 的人	gn
+就会	gn
 怍	gna
 怍	gnai
 愉	gnb
@@ -7457,8 +7453,8 @@ sort: original
 忚	gsyi
 驰	gsym
 必	gt
-自我	gt
 熟悉	gt
+自我	gt
 恤	gtd
 恤	gtdm
 惐	gtdu
@@ -7559,8 +7555,8 @@ sort: original
 𫘦	guyf
 怲	guyn
 鼻	gv
-情况	gv
 自然	gv
+情况	gv
 悑	gvf
 悑	gvfi
 愢	gvg
@@ -7906,6 +7902,7 @@ sort: original
 锵	hfv
 锵	hfvk
 原	hg
+爱情	hg
 铂	hgb
 铂	hgbj
 習	hgbv
@@ -8331,8 +8328,8 @@ sort: original
 孑	hou
 子	hou
 辎	hov
-辎	hovt
 锱	hovt
+辎	hovt
 钮	how
 钮	howh
 钖	howl
@@ -9597,6 +9594,7 @@ sort: original
 湳	ikya
 酒	ikys
 放	il
+注	il
 渥	ila
 渥	ilai
 湩	ilb
@@ -9681,6 +9679,7 @@ sort: original
 汪	ilw
 汪	ilws
 豆	im
+以前	im
 逗	ima
 逗	imak
 湔	imb
@@ -10415,6 +10414,7 @@ sort: original
 副	iv
 世界	iv
 以来	iv
+复杂	iv
 逼	iva
 逼	ivak
 渭	ivb
@@ -12133,8 +12133,8 @@ sort: original
 鴯	jtyn
 薁	jtys
 著	ju
-带走	ju
 这一	ju
+带走	ju
 罵	jua
 罵	juan
 萇	juap
@@ -12241,8 +12241,8 @@ sort: original
 萄	juyf
 苪	juyn
 罗	jv
-当然	jv
 这些	jv
+当然	jv
 带来	jv
 逻	jva
 逻	jvak
@@ -13191,11 +13191,13 @@ sort: original
 𫗴	kzou
 他	l
 你	l
-你	l
 现	l
 现在	l
 睡觉	l
 特	la
+他们	la
+①	la
+迟	la
 羼	laa
 羼	laaa
 遅	laak
@@ -13529,6 +13531,8 @@ sort: original
 詘	lfyk
 鶌	lfyn
 光	lg
+他的	lg
+你的	lg
 珀	lgb
 矈	lgbi
 矏	lgbi
@@ -14563,6 +14567,7 @@ sort: original
 鳲	ltyn
 鳿	ltyn
 环	lu
+属于	lu
 眄	lua
 瑪	luan
 眄	luao
@@ -14643,6 +14648,7 @@ sort: original
 眪	luy
 眪	luyn
 备	lv
+尽	lv
 居然	lv
 瞇	lva
 瞇	lvak
@@ -16402,7 +16408,7 @@ sort: original
 蜹	njyn
 煐	njys
 蝧	njys
-乡	nk
+宝	nk
 螋	nka
 螋	nkaq
 烠	nkb
@@ -16897,6 +16903,7 @@ sort: original
 蜥	nrz
 蜥	nrzj
 谁	ns
+全部	ns
 创造	ns
 燯	nsa
 燯	nsap
@@ -17797,6 +17804,7 @@ sort: original
 圁	oly
 圁	olyk
 主	om
+简单	om
 艴	oma
 艴	omab
 箭	omb
@@ -18269,7 +18277,6 @@ sort: original
 幁	outm
 順	outm
 簪	ouu
-黽	ouuc
 簪	ouuf
 鄳	ouuq
 戼	ouuu
@@ -19683,6 +19690,8 @@ sort: original
 麼	qfym
 阿	qg
 限	qg
+①	qg
+艰	qg
 鲌	qgb
 鲌	qgbv
 陙	qgc
@@ -20286,6 +20295,7 @@ sort: original
 感觉	r
 想要	r
 样	ra
+相信	ra
 樇	raa
 樇	raab
 樤	raar
@@ -20726,6 +20736,7 @@ sort: original
 椶	rhyl
 櫾	rhym
 感	ri
+枝	ri
 欜	ria
 欜	riap
 朼	rib
@@ -21246,6 +21257,7 @@ sort: original
 櫛	roz
 櫛	rozq
 极	rp
+成为	rp
 述	rpa
 樎	rpag
 榁	rpai
@@ -21853,8 +21865,8 @@ sort: original
 大	s
 也	s
 ①	s
-大家	s
 需要	s
+大家	s
 达	sa
 达到	sa
 夿	sab
@@ -22027,9 +22039,9 @@ sort: original
 牰	sdyn
 鼬	sdys
 站	sf
-路上	sf
-特点	sf
 也是	sf
+特点	sf
+路上	sf
 氠	sfa
 踶	sfao
 氠	sfas
@@ -22932,6 +22944,7 @@ sort: original
 霌	sywd
 跟	sz
 也许	sz
+告诉	sz
 蹆	sza
 蹆	szak
 赏	szb
@@ -23302,6 +23315,7 @@ sort: original
 挼	thyb
 摇	thyf
 指	ti
+技	ti
 攮	tia
 攮	tiap
 挴	tic
@@ -24290,7 +24304,6 @@ sort: original
 一	u
 不	u
 要	u
-要	u
 一个	u
 不是	u
 还	ua
@@ -25133,8 +25146,8 @@ sort: original
 于	uk
 还有	uk
 一直	uk
-都在	uk
 都有	uk
+都在	uk
 迂	uka
 迂	ukak
 髄	ukb
@@ -25471,8 +25484,8 @@ sort: original
 髗	uqv
 髗	uqvd
 越	ur
-不能	ur
 一样	ur
+不能	ur
 不想	ur
 唜	urd
 唜	urdi
@@ -25725,12 +25738,12 @@ sort: original
 礓	uuvu
 歪	uuvw
 正	uv
-起来	uv
-一般	uv
 一些	uv
+一般	uv
+起来	uv
 下来	uv
-不止	uv
 更多	uv
+不止	uv
 𬒔	uvb
 𬒔	uvbi
 靕	uvc
@@ -25967,7 +25980,7 @@ sort: original
 然	v
 ②	v
 然后	v
-名字	v
+为什么	v
 冷	va
 来到	va
 粑	vab
@@ -26426,8 +26439,8 @@ sort: original
 粬	vlqm
 欫	vlqw
 艉	vlr
-栥	vlrl
 槃	vlrl
+栥	vlrl
 艉	vlrm
 般	vls
 般	vlso
@@ -26610,6 +26623,7 @@ sort: original
 粈	vowh
 断	vozj
 久	vp
+名字	vp
 粽	vpc
 粽	vpcs
 糦	vpd
@@ -27558,6 +27572,7 @@ sort: original
 槷	wmwr
 摰	wmwt
 闪	wn
+尤其	wn
 堬	wnb
 堬	wnbo
 闽	wnc
@@ -29050,6 +29065,7 @@ sort: original
 娬	yutv
 妩	yuu
 妩	yuub
+黽	yuuc
 嫕	yuug
 姖	yuuk
 韵	yuv
@@ -29059,8 +29075,8 @@ sort: original
 姃	yuvw
 婳	yuvy
 妹	yv
-如此	yv
 竟然	yv
+如此	yv
 媦	yvb
 媦	yvbi
 姳	yvd
@@ -29204,7 +29220,6 @@ sort: original
 彤	yzw
 彤	yzwl
 说	z
-①	z
 ①	z
 话	z
 记得	z
@@ -30462,6 +30477,8 @@ sort: original
 鋾	zuyf
 鈵	zuyn
 谓	zv
+许多	zv
+既然	zv
 谜	zva
 谜	zvak
 錹	zvb
