--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -16354,12 +16354,12 @@ sort: original
 蟥	njdm
 爟	njdq
 蠸	njdq
-焟	njf
+蜡	njf
 爡	njfn
 燤	njfn
 蠇	njfn
-焟	njfo
 蜡	njfo
+焟	njfo
 蟆	njfs
 虹	njg
 虹	njgc
@@ -41909,8 +41909,8 @@ sort: original
 爡	fjnjfn
 燤	fjnjfn
 蠇	fjnjfn
-焟	fjnjfo
 蜡	fjnjfo
+焟	fjnjfo
 蟆	fjnjfs
 虹	fjnjgc
 灴	fjnjgf
