--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -16796,9 +16796,9 @@ sort: original
 亽	npfr
 蚁	nph
 蚁	nphq
-炨	npi
-炨	npib
+蛇	npi
 蛇	npib
+炨	npib
 炷	npl
 倉	npld
 飮	npll
@@ -42228,8 +42228,8 @@ sort: original
 丼	fjnpfj
 亽	fjnpfr
 蚁	fjnphq
-炨	fjnpib
 蛇	fjnpib
+炨	fjnpib
 倉	fjnpld
 飮	fjnpll
 鶬	fjnpln
