--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -16472,10 +16472,10 @@ sort: original
 煄	nlb
 煄	nlbl
 蝩	nlbl
-烽	nlc
+蜂	nlc
 熢	nlca
-烽	nlcf
 蜂	nlcf
+烽	nlcf
 侖	nlcr
 攼	nld
 炇	nldf
@@ -41990,8 +41990,8 @@ sort: original
 煄	fjnlbl
 蝩	fjnlbl
 熢	fjnlca
-烽	fjnlcf
 蜂	fjnlcf
+烽	fjnlcf
 侖	fjnlcr
 炇	fjnldf
 攼	fjnldg
