遗放三简，蛤放三简

--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -16354,12 +16354,12 @@ sort: original
 蟥	njdm
 爟	njdq
 蠸	njdq
-蜡	njf
+焟	njf
 爡	njfn
 燤	njfn
 蠇	njfn
-蜡	njfo
 焟	njfo
+蜡	njfo
 蟆	njfs
 虹	njg
 虹	njgc
@@ -16472,10 +16472,10 @@ sort: original
 煄	nlb
 煄	nlbl
 蝩	nlbl
-蜂	nlc
+烽	nlc
 熢	nlca
-蜂	nlcf
 烽	nlcf
+蜂	nlcf
 侖	nlcr
 攼	nld
 炇	nldf
@@ -16604,10 +16604,10 @@ sort: original
 蠃	nnci
 蚃	nnck
 蜝	nncq
-烚	nnd
+蛤	nnd
 熻	nndh
-烚	nndi
 蛤	nndi
+烚	nndi
 爚	nndl
 炎	nnf
 煔	nnfd
@@ -16796,9 +16796,9 @@ sort: original
 亽	npfr
 蚁	nph
 蚁	nphq
-蛇	npi
-蛇	npib
+炨	npi
 炨	npib
+蛇	npib
 炷	npl
 倉	npld
 飮	npll
@@ -17225,9 +17225,9 @@ sort: original
 蚒	nyzf
 烿	nyzw
 斯	nz
-煺	nza
-螁	nzak
+遗	nza
 煺	nzak
+螁	nzak
 遗	nzak
 焲	nzap
 贵	nzb
@@ -41909,8 +41909,8 @@ sort: original
 爡	fjnjfn
 燤	fjnjfn
 蠇	fjnjfn
-蜡	fjnjfo
 焟	fjnjfo
+蜡	fjnjfo
 蟆	fjnjfs
 虹	fjnjgc
 灴	fjnjgf
@@ -41990,8 +41990,8 @@ sort: original
 煄	fjnlbl
 蝩	fjnlbl
 熢	fjnlca
-蜂	fjnlcf
 烽	fjnlcf
+蜂	fjnlcf
 侖	fjnlcr
 炇	fjnldf
 攼	fjnldg
@@ -42082,8 +42082,8 @@ sort: original
 蚃	fjnnck
 蜝	fjnncq
 熻	fjnndh
-烚	fjnndi
 蛤	fjnndi
+烚	fjnndi
 爚	fjnndl
 煔	fjnnfd
 炎	fjnnff
@@ -42228,8 +42228,8 @@ sort: original
 丼	fjnpfj
 亽	fjnpfr
 蚁	fjnphq
-蛇	fjnpib
 炨	fjnpib
+蛇	fjnpib
 倉	fjnpld
 飮	fjnpll
 鶬	fjnpln
@@ -42521,8 +42521,8 @@ sort: original
 蚺	fjnywh
 蚒	fjnyzf
 烿	fjnyzw
-螁	fjnzak
 煺	fjnzak
+螁	fjnzak
 遗	fjnzak
 焲	fjnzap
 贵	fjnzbc
