--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -16122,10 +16122,10 @@ sort: original
 蝿	nffo
 燝	nfg
 燝	nfgj
-烄	nfh
-蝂	nfhq
-烄	nfhq
+蛟	nfh
 蛟	nfhq
+烄	nfhq
+蝂	nfhq
 焜	nfi
 焜	nfii
 蜫	nfii
@@ -41749,9 +41749,9 @@ sort: original
 焻	fjnffo
 蝿	fjnffo
 燝	fjnfgj
-蝂	fjnfhq
-烄	fjnfhq
 蛟	fjnfhq
+烄	fjnfhq
+蝂	fjnfhq
 焜	fjnfii
 蜫	fjnfii
 螘	fjnfim
@@ -53860,7 +53860,6 @@ sort: original
 虲	nfb
 煴	nfd
 熴	nff
-蝂	nfh
 螘	nfi
 焯	nfj
 熀	nfl
@@ -54029,7 +54028,7 @@ sort: original
 蚔	nys
 蜩	nyw
 蚒	nyz
-螁	nza
+煺	nza
 赢	nzb
 蟀	nzf
 蚚	nzj
