--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -16318,12 +16318,12 @@ sort: original
 剣	nin
 剣	nino
 剱	ninp
-煠	nio
+蝶	nio
 创	niod
 虼	nioi
 蟎	nion
-煠	nior
 蝶	nior
+煠	nior
 煤	nir
 煤	nirl
 隶	nis
@@ -31069,6 +31069,7 @@ sort: original
 敾	fjamdl
 歚	fjamdl
 鄯	fjamdq
+𫢸	fjamfk
 仈	fjamfr
 佹	fjamhi
 儋	fjamhl
@@ -31445,6 +31446,7 @@ sort: original
 承	fjayis
 侗	fjayiw
 倎	fjayjm
+𠙶	fjaykl
 僩	fjayob
 僴	fjayof
 們	fjayoo
@@ -31622,6 +31624,7 @@ sort: original
 竆	fjbhdd
 应	fjbhdg
 膎	fjbhfs
+𦙶	fjbhgi
 脬	fjbhho
 窮	fjbhig
 窕	fjbhis
@@ -31632,6 +31635,7 @@ sort: original
 脪	fjbhko
 庞	fjbhlg
 胧	fjbhli
+𫷷	fjbhlq
 廡	fjbhnf
 膴	fjbhnf
 廖	fjbhnw
@@ -32027,6 +32031,7 @@ sort: original
 窲	fjbvvk
 膦	fjbvvt
 窭	fjbvyb
+𦝼	fjbvyb
 窾	fjbwcl
 竃	fjbwfo
 胍	fjbwgi
@@ -32112,6 +32117,7 @@ sort: original
 瘊	fjcauu
 瘤	fjcavt
 痒	fjcayb
+𫠆	fjcayi
 祥	fjcays
 痭	fjcbbi
 稝	fjcbbi
@@ -32469,6 +32475,7 @@ sort: original
 瘐	fjcknr
 疽	fjckqb
 租	fjckqh
+𬩽	fjckqk
 祓	fjckqp
 秡	fjckqp
 狙	fjckqq
@@ -32484,6 +32491,7 @@ sort: original
 鸑	fjclcn
 獄	fjclcq
 癖	fjcldj
+𫛭	fjcldn
 癵	fjclfn
 癴	fjclft
 癑	fjclgc
@@ -32741,6 +32749,7 @@ sort: original
 狎	fjcqjq
 疖	fjcqkb
 邦	fjcqkf
+𨙸	fjcqki
 祁	fjcqks
 癃	fjcqlm
 瘾	fjcqmg
@@ -32806,6 +32815,7 @@ sort: original
 祂	fjcsys
 獅	fjctbo
 羣	fjctda
+𫖳	fjctda
 群	fjctda
 覠	fjctdh
 君	fjctdi
@@ -33037,6 +33047,7 @@ sort: original
 责	fjczbf
 贯	fjczbm
 狈	fjczbq
+𬸚	fjczcd
 犺	fjczcj
 秔	fjczcj
 狱	fjczcq
@@ -33048,6 +33059,7 @@ sort: original
 痃	fjczfy
 痕	fjczgb
 狠	fjczgq
+𪟝	fjczjl
 祈	fjczjs
 癠	fjczmo
 穧	fjczmo
@@ -33091,6 +33103,7 @@ sort: original
 哶	fjdaun
 喉	fjdauu
 咩	fjdayi
+𬱖	fjdayy
 嚠	fjdazo
 鹃	fjdbdn
 肙	fjdbii
@@ -33137,6 +33150,7 @@ sort: original
 唀	fjdcon
 唚	fjdcpq
 吠	fjdcqi
+𠳐	fjdcqk
 哚	fjdcrl
 呩	fjdcsi
 票	fjdcsk
@@ -33236,6 +33250,7 @@ sort: original
 嚩	fjdfok
 噝	fjdfom
 喲	fjdfop
+𫑡	fjdfoq
 黾	fjdfot
 嘬	fjdfpq
 嗺	fjdfqi
@@ -33733,6 +33748,7 @@ sort: original
 啛	fjduny
 別	fjduod
 鸮	fjduod
+𫫇	fjduog
 咂	fjduoj
 啢	fjduon
 鴞	fjduon
@@ -34073,6 +34089,7 @@ sort: original
 晀	fjfhis
 嶾	fjfhjg
 効	fjfhjl
+𫵷	fjfhjl
 巁	fjfhjn
 曞	fjfhjn
 崤	fjfhkb
@@ -34114,6 +34131,7 @@ sort: original
 嵏	fjfhyl
 嵕	fjfhyl
 崭	fjfhzj
+𫖮	fjfiay
 背	fjfibi
 北	fjfibp
 鄁	fjfibq
@@ -34191,6 +34209,7 @@ sort: original
 剬	fjfjod
 牎	fjfjpg
 崂	fjfjpj
+𫶇	fjfjpo
 嵘	fjfjpr
 㠓	fjfjpy
 曚	fjfjpy
@@ -34247,7 +34266,9 @@ sort: original
 嶻	fjfktq
 嶼	fjfkum
 牖	fjfkvf
+𬀩	fjfkwo
 暔	fjfkya
+𪩘	fjfkyc
 颅	fjflay
 衝	fjflbl
 行	fjflcc
@@ -34284,6 +34305,7 @@ sort: original
 暇	fjfloq
 徦	fjfloq
 欥	fjflqo
+𪨰	fjflqs
 毷	fjflrm
 卢	fjflsb
 役	fjflsc
@@ -34924,6 +34946,7 @@ sort: original
 晻	fjfsfo
 崎	fjfsgk
 徛	fjfsgk
+𪨶	fjfshc
 嵼	fjfshm
 巑	fjfshm
 晐	fjfsho
@@ -35103,6 +35126,7 @@ sort: original
 圼	fjfwho
 曀	fjfwim
 牘	fjfwjm
+𬀪	fjfwjo
 岘	fjfwjs
 峙	fjfwkd
 時	fjfwkd
@@ -35213,6 +35237,7 @@ sort: original
 稾	fjgchg
 悸	fjgcho
 忮	fjgcii
+𫘧	fjgcis
 憳	fjgcjk
 慣	fjgclm
 皟	fjgclm
@@ -35226,6 +35251,7 @@ sort: original
 臭	fjgcqo
 斎	fjgcsq
 愱	fjgcus
+𬴃	fjgcus
 惯	fjgczb
 悒	fjgdab
 逜	fjgdak
@@ -35258,6 +35284,7 @@ sort: original
 憟	fjgdvm
 怞	fjgdyi
 惿	fjgfao
+𫘨	fjgfao
 怗	fjgfdi
 愠	fjgfdm
 樂	fjgffr
@@ -35331,8 +35358,10 @@ sort: original
 鹑	fjghdn
 懨	fjghfc
 慀	fjghfs
+𫘬	fjghfs
 慴	fjghgb
 怙	fjghgi
+𫘪	fjghgj
 驳	fjghhq
 恌	fjghis
 懚	fjghjg
@@ -35437,6 +35466,7 @@ sort: original
 懌	fjgjwa
 鹫	fjgjwd
 忟	fjgjwi
+𫘜	fjgjwm
 鷲	fjgjwn
 慌	fjgjwo
 蹵	fjgjws
@@ -35534,6 +35564,7 @@ sort: original
 愉	fjgnbo
 蜃	fjgncc
 悇	fjgnch
+𬳿	fjgnch
 恰	fjgndi
 憸	fjgndn
 忓	fjgngi
@@ -35669,6 +35700,7 @@ sort: original
 悎	fjgsdi
 驮	fjgsdm
 骑	fjgsgk
+𬳽	fjgshd
 慡	fjgshh
 骇	fjgshm
 恞	fjgsig
@@ -35740,6 +35772,7 @@ sort: original
 皰	fjguis
 慒	fjgulf
 恇	fjgulw
+𫘝	fjgunr
 快	fjgunr
 悽	fjguny
 的	fjgupf
@@ -35754,9 +35787,11 @@ sort: original
 憯	fjguuf
 兜	fjguuh
 怌	fjguuh
+𬳵	fjguuh
 怃	fjguui
 怇	fjguuk
 怔	fjguvw
+𫘦	fjguyf
 怲	fjguyn
 悑	fjgvfi
 愢	fjgvgi
@@ -35786,6 +35821,7 @@ sort: original
 愄	fjgvup
 恀	fjgvvk
 憐	fjgvvt
+𬴊	fjgvvt
 怽	fjgvwi
 悻	fjgway
 懛	fjgwda
@@ -35802,7 +35838,9 @@ sort: original
 皢	fjgwwh
 忙	fjgwwi
 忧	fjgwyi
+𬳶	fjgydi
 悱	fjgyfi
+𬴂	fjgyfm
 惛	fjgyfo
 魄	fjgygb
 愧	fjgygi
@@ -35827,6 +35865,7 @@ sort: original
 惽	fjgzfo
 慉	fjgzfv
 怰	fjgzfy
+𫠊	fjgzfy
 恨	fjgzgi
 恼	fjgzhy
 忻	fjgzji
@@ -35862,6 +35901,7 @@ sort: original
 贗	fjhatm
 鴈	fjhatn
 翭	fjhauu
+𬭤	fjhauu
 镏	fjhavt
 軈	fjhbag
 镩	fjhbda
@@ -35880,6 +35920,7 @@ sort: original
 鶦	fjhbtn
 转	fjhcac
 锖	fjhcbi
+𬭬	fjhccc
 曆	fjhccf
 厤	fjhcch
 磿	fjhccu
@@ -35889,6 +35930,7 @@ sort: original
 铸	fjhckd
 锻	fjhcls
 鿏	fjhclt
+𬭁	fjhcmj
 厫	fjhcml
 锲	fjhcms
 锹	fjhcnf
@@ -35907,6 +35949,7 @@ sort: original
 魇	fjhcyg
 翀	fjhdas
 钟	fjhdas
+𫓶	fjhdbi
 镖	fjhdcs
 铝	fjhddi
 営	fjhddi
@@ -35931,6 +35974,7 @@ sort: original
 锅	fjhdyn
 厛	fjhdzj
 翨	fjhfao
+𬬹	fjhfas
 镚	fjhfbb
 厭	fjhfbc
 懕	fjhfbg
@@ -35957,6 +36001,7 @@ sort: original
 锡	fjhfju
 厬	fjhfld
 轳	fjhfls
+𬬻	fjhfls
 锞	fjhfrl
 躶	fjhfrl
 奚	fjhfsd
@@ -35976,6 +36021,7 @@ sort: original
 鿔	fjhggk
 翯	fjhggv
 镦	fjhghl
+𬭚	fjhgho
 怘	fjhgig
 孞	fjhgio
 厡	fjhgis
@@ -36034,12 +36080,14 @@ sort: original
 锾	fjhhuq
 翪	fjhhyl
 逃	fjhiak
+𫖯	fjhiay
 顾	fjhiay
 厪	fjhidc
 镒	fjhidm
 镪	fjhidn
 钫	fjhifj
 钳	fjhigj
+𬭛	fjhigp
 躬	fjhigs
 镟	fjhiia
 锴	fjhiig
@@ -36060,6 +36108,7 @@ sort: original
 铛	fjhjcl
 羿	fjhjcv
 黉	fjhjdm
+𨱑	fjhjdm
 勵	fjhjfj
 厲	fjhjfn
 厝	fjhjfo
@@ -36075,6 +36124,7 @@ sort: original
 孙	fjhjko
 历	fjhjlc
 労	fjhjld
+𨱏	fjhjnd
 铹	fjhjpj
 镬	fjhjqq
 䥽	fjhjqy
@@ -36096,7 +36146,9 @@ sort: original
 射	fjhkds
 辂	fjhkgc
 铬	fjhkgj
+𫐐	fjhkhd
 敎	fjhkhl
+𨱇	fjhkip
 舀	fjhkja
 锄	fjhkjl
 厧	fjhkkm
@@ -36126,6 +36178,7 @@ sort: original
 锋	fjhlcf
 故	fjhldg
 孜	fjhldo
+𨐈	fjhlgc
 覓	fjhlhd
 覚	fjhlhd
 锯	fjhlhg
@@ -36150,6 +36203,7 @@ sort: original
 铯	fjhmab
 锐	fjhmdh
 轺	fjhmdi
+𬬿	fjhmdi
 镵	fjhmdk
 兴	fjhmfd
 镃	fjhmff
@@ -36163,6 +36217,8 @@ sort: original
 镉	fjhmgj
 镫	fjhmim
 鿭	fjhmjk
+𨱔	fjhmkk
+𬨎	fjhmky
 誉	fjhmly
 翂	fjhmmd
 躮	fjhmmd
@@ -36172,8 +36228,11 @@ sort: original
 乿	fjhmot
 轫	fjhmpf
 躵	fjhmpg
+𬭩	fjhmrh
 挙	fjhmts
 举	fjhmts
+𫟦	fjhmya
+𬭼	fjhmya
 厏	fjhnac
 输	fjhnbo
 蛍	fjhncd
@@ -36185,12 +36244,14 @@ sort: original
 轩	fjhngc
 厈	fjhngc
 轮	fjhnib
+𬬭	fjhnib
 翑	fjhnjv
 铨	fjhnlw
 辁	fjhnlw
 锬	fjhnnf
 軂	fjhnnj
 锉	fjhnnw
+𫓹	fjhnqj
 鄦	fjhnqk
 仄	fjhnrc
 键	fjhntj
@@ -36213,6 +36274,7 @@ sort: original
 钏	fjhocj
 钊	fjhodj
 刈	fjhodq
+𫟹	fjhogj
 龚	fjhogl
 锢	fjhohg
 钇	fjhoij
@@ -36233,12 +36295,15 @@ sort: original
 锭	fjhpao
 辖	fjhpcd
 孮	fjhpcs
+𬭳	fjhpdi
+𫓧	fjhpfj
 愛	fjhpgl
 翚	fjhphc
 躭	fjhphd
 铊	fjhpib
 钑	fjhpjj
 爱	fjhpkq
+𬭎	fjhpkr
 覛	fjhplh
 軉	fjhplm
 镲	fjhpmc
@@ -36251,7 +36316,9 @@ sort: original
 铒	fjhprj
 聋	fjhprl
 铦	fjhpsj
+𫔎	fjhptd
 鶏	fjhptn
+𫐓	fjhptr
 翬	fjhpuk
 舜	fjhpvt
 铵	fjhpyb
@@ -36295,6 +36362,7 @@ sort: original
 锍	fjhroc
 刹	fjhrod
 铖	fjhrot
+𬬸	fjhrpf
 弒	fjhrpj
 剎	fjhrpo
 暦	fjhrrf
@@ -36304,12 +36372,14 @@ sort: original
 弑	fjhrtj
 钵	fjhruh
 躰	fjhruh
+𬭊	fjhrwh
 钺	fjhrwj
 彩	fjhrwl
 覶	fjhryh
 辭	fjhryj
 閷	fjhryn
 亂	fjhryo
+𫟼	fjhsak
 龎	fjhsby
 轪	fjhsdc
 喾	fjhsdi
@@ -36338,6 +36408,7 @@ sort: original
 厊	fjhsyc
 镝	fjhsyh
 铽	fjhtgi
+𬬩	fjhtij
 轼	fjhtjg
 遜	fjhtma
 愻	fjhtmg
@@ -36354,6 +36425,7 @@ sort: original
 轿	fjhtso
 锇	fjhttt
 铙	fjhtuh
+𫔍	fjhtvv
 铢	fjhtvw
 翵	fjhtyn
 鳫	fjhtyn
@@ -36364,6 +36436,7 @@ sort: original
 躼	fjhuap
 孲	fjhuau
 钚	fjhubj
+𬬮	fjhucj
 逅	fjhuda
 厅	fjhudc
 軀	fjhudd
@@ -36379,6 +36452,7 @@ sort: original
 钙	fjhufo
 躽	fjhufy
 厦	fjhugl
+𫐄	fjhuhd
 躯	fjhuhq
 卮	fjhuij
 孢	fjhuis
@@ -36397,6 +36471,7 @@ sort: original
 锗	fjhuqj
 钩	fjhurs
 䶮	fjhusd
+𬒈	fjhusd
 砻	fjhusl
 钱	fjhutg
 頨	fjhutm
@@ -36408,6 +36483,7 @@ sort: original
 辅	fjhvfc
 铺	fjhvfj
 锶	fjhvgi
+𬭶	fjhvhj
 轨	fjhvjc
 镈	fjhvkd
 钭	fjhvks
@@ -36421,6 +36497,7 @@ sort: original
 钿	fjhvtj
 舞	fjhvtn
 辚	fjhvvt
+𬭸	fjhvvt
 镂	fjhvyb
 辕	fjhwdp
 锏	fjhwfo
@@ -36432,6 +36509,7 @@ sort: original
 垄	fjhwhl
 觅	fjhwja
 觉	fjhwjd
+𬭯	fjhwld
 钐	fjhwlj
 钔	fjhwmj
 軇	fjhwok
@@ -36439,6 +36517,7 @@ sort: original
 锎	fjhwuj
 瓳	fjhwwg
 厓	fjhwwh
+𫓯	fjhwwh
 厖	fjhwwl
 遥	fjhyak
 妥	fjhyba
@@ -36460,6 +36539,7 @@ sort: original
 辋	fjhymw
 钠	fjhynr
 厎	fjhypf
+𬨂	fjhysc
 軄	fjhytg
 繇	fjhytm
 鵎	fjhytn
@@ -36472,6 +36552,7 @@ sort: original
 铉	fjhzfy
 银	fjhzgj
 斩	fjhzjc
+𬬱	fjhzjj
 锨	fjhzlq
 翠	fjhznk
 厕	fjhzod
@@ -36929,6 +37010,7 @@ sort: original
 施	fjiisy
 旛	fjiitv
 涨	fjiiuc
+𬸦	fjiiud
 瀰	fjiiuh
 巺	fjiium
 潁	fjiium
@@ -37054,6 +37136,7 @@ sort: original
 濆	fjikjm
 澣	fjikjn
 漧	fjikjo
+𣸣	fjikjz
 滇	fjikkm
 淔	fjikkq
 瀓	fjiklw
@@ -37080,6 +37163,7 @@ sort: original
 洘	fjikuo
 湊	fjikus
 潍	fjikws
+𣲗	fjikws
 湳	fjikya
 酒	fjikys
 渥	fjilai
@@ -37311,6 +37395,7 @@ sort: original
 漗	fjiolg
 勩	fjiolj
 貰	fjiolm
+𬇹	fjiolp
 澲	fjiomv
 溫	fjiond
 顢	fjionm
@@ -37341,6 +37426,7 @@ sort: original
 沑	fjiowh
 汤	fjiowl
 烫	fjiown
+𬍡	fjiowp
 溷	fjioys
 贳	fjiozb
 勚	fjiozj
@@ -37615,6 +37701,7 @@ sort: original
 滑	fjiugs
 弖	fjiuhg
 沤	fjiuhq
+𫸩	fjiuhq
 洶	fjiuhy
 泡	fjiuis
 汧	fjiujc
@@ -37628,6 +37715,7 @@ sort: original
 欵	fjiulq
 洭	fjiulw
 渹	fjiuly
+𬇕	fjiumd
 彌	fjiumh
 濔	fjiumh
 瓕	fjiump
@@ -37666,6 +37754,7 @@ sort: original
 洰	fjiuuk
 灊	fjiuum
 渠	fjiuur
+𣲘	fjiuus
 汮	fjiuvl
 淗	fjiuvm
 漹	fjiuvn
@@ -37801,6 +37890,7 @@ sort: original
 湆	fjiyys
 浵	fjiyzw
 液	fjizap
+𬇙	fjizbs
 沆	fjizcj
 瀼	fjizdp
 汴	fjizfb
@@ -38014,10 +38104,12 @@ sort: original
 茜	fjjdkc
 藪	fjjdkl
 蔞	fjjdky
+𬜯	fjjdlc
 蒷	fjjdlm
 賀	fjjdlm
 黅	fjjdma
 黇	fjjdmd
+𦭜	fjjdmf
 黄	fjjdmf
 黆	fjjdmh
 斢	fjjdmk
@@ -38475,6 +38567,7 @@ sort: original
 莬	fjjmdh
 苕	fjjmdi
 葂	fjjmdj
+𬟁	fjjmdn
 蒴	fjjmfb
 蕴	fjjmfd
 办	fjjmfl
@@ -38623,6 +38716,7 @@ sort: original
 廽	fjjotj
 乵	fjjotk
 劜	fjjotl
+𦰡	fjjotq
 蔮	fjjotu
 羈	fjjoun
 蘜	fjjouv
@@ -38654,6 +38748,7 @@ sort: original
 荥	fjjpis
 芨	fjjpjc
 劳	fjjpjl
+𫇭	fjjpjp
 藛	fjjpkn
 萓	fjjpkq
 蒬	fjjpkt
@@ -38956,6 +39051,7 @@ sort: original
 頤	fjjutm
 斌	fjjutv
 赟	fjjutz
+𨭉	fjjutz
 芜	fjjuuc
 苤	fjjuuh
 蘙	fjjuuh
@@ -38984,6 +39080,7 @@ sort: original
 茈	fjjvib
 葾	fjjvig
 苑	fjjvij
+𬞟	fjjvja
 艽	fjjvjc
 藉	fjjvjf
 荹	fjjvjk
@@ -39037,6 +39134,7 @@ sort: original
 睪	fjjway
 薹	fjjwda
 薳	fjjwda
+𬜬	fjjwdi
 瞏	fjjwdp
 薚	fjjwfj
 苽	fjjwgc
@@ -39222,6 +39320,7 @@ sort: original
 醕	fjkgfo
 醇	fjkgho
 酠	fjkgky
+𫗧	fjkgss
 醐	fjkhbi
 兒	fjkhdj
 酤	fjkhgy
@@ -39419,6 +39518,7 @@ sort: original
 酡	fjkpib
 酧	fjkpkd
 索	fjkpms
+𬪩	fjkppy
 饵	fjkprs
 疐	fjkpva
 扆	fjkpyh
@@ -39565,6 +39665,7 @@ sort: original
 所	fjkzjh
 醉	fjkznk
 乺	fjkzoi
+𫗴	fjkzou
 羼	fjlaaa
 遅	fjlaak
 諝	fjlabi
@@ -39635,6 +39736,7 @@ sort: original
 処	fjlcjt
 玑	fjlcjw
 尉	fjlckd
+𬍤	fjlckd
 慰	fjlckg
 熨	fjlckn
 螱	fjlckn
@@ -39970,6 +40072,7 @@ sort: original
 弄	fjljcw
 珈	fjljdi
 瞒	fjljdl
+𫞩	fjljdl
 璜	fjljdm
 黋	fjljdm
 瓘	fjljdq
@@ -40061,6 +40164,7 @@ sort: original
 璵	fjlkum
 玮	fjlkww
 諵	fjlkya
+𤩽	fjlkyc
 琶	fjllab
 琴	fjllaj
 瞾	fjllbj
@@ -40095,6 +40199,7 @@ sort: original
 眉	fjllms
 瓔	fjllmy
 煛	fjllnf
+𤫉	fjllnq
 珡	fjllnr
 瞓	fjlloc
 瑕	fjlloq
@@ -40106,6 +40211,7 @@ sort: original
 郿	fjllqk
 鸜	fjllqn
 矍	fjllqq
+𨟠	fjllqq
 氍	fjllqr
 戵	fjllqt
 琹	fjllrl
@@ -40508,6 +40614,7 @@ sort: original
 謣	fjlsoo
 謗	fjlspi
 諦	fjlspo
+𤧛	fjlspo
 矐	fjlsqi
 琊	fjlsqk
 譇	fjlsuq
@@ -40589,6 +40696,7 @@ sort: original
 詾	fjluhy
 玸	fjluis
 訮	fjlujc
+𬍛	fjlujk
 講	fjlujw
 詽	fjlukn
 盱	fjluks
@@ -40672,6 +40780,7 @@ sort: original
 讟	fjlwjl
 瓄	fjlwjm
 讀	fjlwjm
+𪾢	fjlwjm
 现	fjlwjw
 詩	fjlwkd
 睦	fjlwmw
@@ -40783,6 +40892,7 @@ sort: original
 翦	fjmboh
 剪	fjmbom
 煎	fjmbon
+𬘬	fjmcbi
 急	fjmcgi
 皱	fjmcgp
 绿	fjmcis
@@ -40866,6 +40976,7 @@ sort: original
 觻	fjmggr
 缟	fjmggs
 觫	fjmggs
+𬘯	fjmgho
 觴	fjmgij
 缴	fjmgil
 觾	fjmgin
@@ -40873,6 +40984,7 @@ sort: original
 觞	fjmgiw
 觨	fjmgji
 觪	fjmgjk
+𫟅	fjmgjk
 觔	fjmgjl
 觵	fjmgjm
 觸	fjmgjn
@@ -40909,8 +41021,10 @@ sort: original
 爸	fjmhab
 厃	fjmhcd
 尣	fjmhdf
+𬱟	fjmhia
 危	fjmhij
 頠	fjmhim
+𫄨	fjmhko
 尩	fjmhlw
 辔	fjmhmd
 詹	fjmhml
@@ -40996,7 +41110,9 @@ sort: original
 绦	fjmlrl
 纴	fjmlrs
 癹	fjmlsf
+𬘩	fjmltj
 绛	fjmltn
+𫄸	fjmlvh
 终	fjmlvl
 詧	fjmlyf
 绝	fjmmab
@@ -41043,6 +41159,7 @@ sort: original
 纨	fjmnws
 缋	fjmnzb
 递	fjmoak
+𬘓	fjmocs
 鹈	fjmodn
 弟	fjmoff
 普	fjmofo
@@ -41054,6 +41171,7 @@ sort: original
 剃	fjmood
 缆	fjmoow
 兰	fjmorf
+𬘡	fjmosd
 鵜	fjmotn
 缁	fjmovt
 纽	fjmowh
@@ -41065,11 +41183,14 @@ sort: original
 刃	fjmpfd
 刄	fjmpfd
 忍	fjmpgi
+𬘘	fjmphd
 级	fjmpjs
 鯗	fjmpmn
 歰	fjmpmv
+𬘫	fjmpoh
 丒	fjmpuh
 纻	fjmpuh
+𬙂	fjmpum
 纾	fjmpvs
 缤	fjmpzm
 经	fjmqjg
@@ -41090,6 +41211,7 @@ sort: original
 缄	fjmriw
 缃	fjmrlm
 枀	fjmrrl
+𬘭	fjmrrl
 公	fjmrsf
 頌	fjmrum
 瓮	fjmrww
@@ -41098,6 +41220,7 @@ sort: original
 关	fjmsdf
 绮	fjmsgk
 缵	fjmshz
+𦈡	fjmsjr
 缭	fjmsmj
 缅	fjmsms
 绔	fjmsoo
@@ -41113,6 +41236,7 @@ sort: original
 半	fjmtsf
 绕	fjmtuh
 頖	fjmtum
+𫄧	fjmtvt
 鳭	fjmtyn
 鷊	fjmtyn
 纯	fjmufc
@@ -41421,6 +41545,7 @@ sort: original
 兾	fjmvog
 继	fjmvot
 细	fjmvts
+𬙊	fjmvwh
 缕	fjmvyb
 缬	fjmwda
 结	fjmwdi
@@ -41430,6 +41555,7 @@ sort: original
 缍	fjmycs
 䌹	fjmydi
 绯	fjmyfs
+𫄷	fjmygi
 绤	fjmygs
 纲	fjmyhq
 烉	fjmymn
@@ -41441,6 +41567,7 @@ sort: original
 纸	fjmyss
 绸	fjmywd
 负	fjmzbd
+𬙋	fjmzdp
 缗	fjmzfo
 缡	fjmzhn
 釡	fjmzjf
@@ -41523,6 +41650,7 @@ sort: original
 虮	fjncjc
 燖	fjncjk
 蟳	fjncjk
+𬊈	fjnckd
 敘	fjncld
 仺	fjnclr
 煅	fjncls
@@ -41755,8 +41883,8 @@ sort: original
 创	fjniod
 虼	fjnioi
 蟎	fjnion
-煠	fjnior
 蝶	fjnior
+煠	fjnior
 煤	fjnirl
 汬	fjnisj
 氽	fjnisr
@@ -41914,6 +42042,7 @@ sort: original
 螆	fjnmff
 平	fjnmfg
 蝉	fjnmfk
+𬊤	fjnmfk
 螎	fjnmgc
 蠏	fjnmgs
 蛫	fjnmhi
@@ -42145,6 +42274,7 @@ sort: original
 炠	fjnqjf
 烃	fjnqjg
 炼	fjnqjk
+𬟽	fjnqjk
 邩	fjnqkf
 邗	fjnqkg
 邭	fjnqkj
@@ -42262,6 +42392,7 @@ sort: original
 蛨	fjnugb
 螖	fjnugc
 衋	fjnugd
+𬉼	fjnuhq
 炮	fjnuis
 蚫	fjnuis
 蚈	fjnujc
@@ -42716,6 +42847,7 @@ sort: original
 箩	fjojvk
 圛	fjojwa
 韊	fjojym
+𬕂	fjojzb
 迅	fjokak
 囿	fjokbi
 簄	fjokda
@@ -43254,6 +43386,7 @@ sort: original
 餧	fjpcyb
 褖	fjpcys
 餯	fjpcys
+𫌀	fjpczb
 衶	fjpdas
 裐	fjpdbi
 褾	fjpdcs
@@ -43682,6 +43815,7 @@ sort: original
 襱	fjpsby
 聕	fjpsdi
 餢	fjpsdi
+𬸣	fjpsdn
 裺	fjpsfo
 餣	fjpsfo
 寄	fjpsgk
@@ -43935,6 +44069,7 @@ sort: original
 阴	fjqbik
 鲤	fjqblv
 鳙	fjqbnb
+𩾌	fjqbni
 鲭	fjqcbi
 黁	fjqcfo
 穈	fjqchm
@@ -43971,6 +44106,7 @@ sort: original
 鲛	fjqfhq
 鳎	fjqfhv
 鲲	fjqfii
+𬮿	fjqfij
 隑	fjqfim
 鳗	fjqfjq
 鲥	fjqfkd
@@ -43991,8 +44127,11 @@ sort: original
 鲄	fjqgkv
 隍	fjqglw
 鳇	fjqglw
+𬶠	fjqgmf
+𬶟	fjqgod
 陂	fjqgpk
 鲏	fjqgpv
+𬯀	fjqgqk
 鲚	fjqgqv
 陴	fjqgtk
 虙	fjqgtp
@@ -44002,6 +44141,7 @@ sort: original
 阵	fjqhck
 鳛	fjqhgb
 阨	fjqhij
+𬶐	fjqhis
 隱	fjqhjg
 檃	fjqhjr
 櫽	fjqhjr
@@ -44058,6 +44198,7 @@ sort: original
 怼	fjqkgi
 皻	fjqkgp
 鲵	fjqkhd
+𨺙	fjqkhd
 隨	fjqkja
 隋	fjqkjb
 嶞	fjqkjf
@@ -44096,12 +44237,15 @@ sort: original
 隐	fjqmcg
 獻	fjqmcq
 際	fjqmcs
+𬶭	fjqmcs
 齾	fjqmcy
+𩾃	fjqmdh
 切	fjqmdq
 鱽	fjqmdv
 鬳	fjqmgh
 隔	fjqmgk
 陒	fjqmhi
+𬶏	fjqmhi
 隥	fjqmim
 陷	fjqmkj
 鳟	fjqmkk
@@ -44123,6 +44267,7 @@ sort: original
 险	fjqnhd
 険	fjqnin
 阱	fjqnjk
+𬶋	fjqnjv
 陯	fjqnlc
 隤	fjqnlm
 鲆	fjqnmf
@@ -44135,6 +44280,7 @@ sort: original
 隂	fjqnuc
 顦	fjqnum
 坠	fjqnwh
+𬯎	fjqnzb
 隟	fjqofr
 阮	fjqohd
 鲴	fjqohg
@@ -44145,17 +44291,21 @@ sort: original
 虡	fjqomf
 隽	fjqoni
 虛	fjqooo
+𫚭	fjqooo
 戱	fjqoot
 鳤	fjqopb
 鲣	fjqoqw
 戯	fjqotg
 鲺	fjqotn
+𫚕	fjqouo
 鲻	fjqovt
 觑	fjqowj
 虚	fjqoyh
+𬶮	fjqpdi
 卪	fjqpfk
 叉	fjqpfy
 陀	fjqpib
+𬶍	fjqpib
 陕	fjqpmf
 蚤	fjqpnc
 鲩	fjqpoh
@@ -44163,6 +44313,7 @@ sort: original
 陬	fjqpqy
 鲰	fjqpqy
 黀	fjqpqy
+𩽾	fjqpyb
 虤	fjqqhh
 雐	fjqqih
 雔	fjqqii
@@ -44605,6 +44756,7 @@ sort: original
 槄	fjrhkj
 楯	fjrhkl
 桸	fjrhko
+𬃊	fjrhkz
 栊	fjrhll
 橛	fjrhml
 榉	fjrhmt
@@ -44717,6 +44869,7 @@ sort: original
 栉	fjrjqk
 桏	fjrjqk
 欍	fjrjqk
+𨚕	fjrjqk
 櫵	fjrjqn
 檴	fjrjqq
 樫	fjrjqw
@@ -45029,6 +45182,7 @@ sort: original
 槻	fjrplh
 柱	fjrplw
 檫	fjrpmc
+𬂩	fjrpmf
 梡	fjrpoh
 櫕	fjrppm
 欇	fjrppp
@@ -45153,6 +45307,7 @@ sort: original
 槞	fjrsfo
 椅	fjrsgk
 毨	fjrshd
+𣗋	fjrshd
 樉	fjrshh
 核	fjrshl
 欑	fjrshm
@@ -45445,6 +45600,7 @@ sort: original
 蹿	fjsbda
 踮	fjsbfd
 霢	fjsbhp
+𦒍	fjsbhv
 犈	fjsbij
 踡	fjsbij
 蹠	fjsbin
@@ -45484,6 +45640,7 @@ sort: original
 躀	fjsclm
 雪	fjsclv
 牳	fjscmn
+𧿹	fjscmu
 乸	fjscmy
 踿	fjscnf
 鼣	fjscqs
@@ -45812,6 +45969,7 @@ sort: original
 踰	fjsnbo
 蹹	fjsndh
 跲	fjsndi
+𬌗	fjsndi
 跄	fjsnij
 竘	fjsnjl
 鼩	fjsnjs
@@ -46880,6 +47038,7 @@ sort: original
 郔	fjtvtq
 搩	fjtvtr
 揋	fjtvup
+𬸪	fjtvvd
 翻	fjtvvh
 勫	fjtvvj
 拸	fjtvvk
@@ -47299,8 +47458,10 @@ sort: original
 礹	fjuddl
 鷗	fjuddn
 剾	fjuddo
+𥔲	fjuddo
 敺	fjuddq
 趮	fjuddr
+𥖨	fjuddr
 甌	fjuddw
 曺	fjudfo
 智	fjudfo
@@ -47548,6 +47709,7 @@ sort: original
 碣	fjufuw
 匩	fjufuw
 匽	fjufyb
+𬸘	fjufyd
 础	fjufyk
 趉	fjufyk
 鶠	fjufyn
@@ -47700,6 +47862,7 @@ sort: original
 盂	fjukdm
 骼	fjukgg
 硌	fjukgs
+𫠜	fjukhd
 硣	fjukho
 髓	fjukja
 磌	fjukkm
@@ -47810,6 +47973,7 @@ sort: original
 骱	fjunod
 刔	fjunod
 砎	fjunod
+𬹼	fjunod
 磡	fjunoj
 碪	fjunot
 勽	fjunrk
@@ -47853,6 +48017,7 @@ sort: original
 礏	fjuomv
 兩	fjuonn
 碯	fjuooh
+𬒗	fjuoow
 勻	fjuork
 硱	fjuorl
 丂	fjuoth
@@ -47918,6 +48083,7 @@ sort: original
 硹	fjurmr
 硫	fjuroc
 礎	fjurra
+𬺓	fjurra
 晉	fjurrf
 碄	fjurrl
 戩	fjurrt
@@ -47941,6 +48107,7 @@ sort: original
 昋	fjusfo
 硽	fjusfo
 碕	fjusgk
+𬺈	fjusgk
 骸	fjushg
 磢	fjushh
 礸	fjushm
@@ -48045,6 +48212,7 @@ sort: original
 硏	fjuukn
 骬	fjuuks
 鹥	fjuuld
+𥕢	fjuulf
 翳	fjuulh
 醫	fjuulk
 瞖	fjuull
@@ -48083,6 +48251,7 @@ sort: original
 趜	fjuuvm
 礓	fjuuvu
 歪	fjuuvw
+𬒔	fjuvbi
 靕	fjuvcb
 匍	fjuvfk
 龇	fjuvib
@@ -48311,6 +48480,7 @@ sort: original
 貗	fjvdky
 盙	fjvdmf
 盘	fjvdmo
+𬷕	fjvdnf
 鸠	fjvdnj
 鸼	fjvdno
 艥	fjvdpt
@@ -48427,6 +48597,7 @@ sort: original
 麛	fjvipr
 飺	fjvips
 雌	fjviqi
+𫚖	fjviqv
 柴	fjvirl
 冰	fjvisl
 粚	fjvisy
@@ -48720,6 +48891,7 @@ sort: original
 冶	fjvrdi
 耛	fjvrdi
 凍	fjvrfo
+𥻗	fjvrfu
 减	fjvriw
 麙	fjvriw
 黬	fjvriw
@@ -48959,6 +49131,7 @@ sort: original
 望	fjwblw
 墉	fjwbnb
 塘	fjwbnd
+𡐓	fjwbni
 垿	fjwbpv
 堔	fjwbrl
 堘	fjwbwh
@@ -49013,6 +49186,7 @@ sort: original
 喆	fjwdwd
 嚞	fjwdwd
 堙	fjwdwh
+𬮱	fjwdwh
 㙘	fjwdyb
 埚	fjwdyn
 殒	fjwdzb
@@ -49076,6 +49250,7 @@ sort: original
 垍	fjwgoh
 坡	fjwgph
 壕	fjwgpy
+𫔶	fjwgrl
 殐	fjwgsd
 埤	fjwgtk
 堩	fjwguv
@@ -49094,6 +49269,7 @@ sort: original
 垅	fjwhlh
 毂	fjwhls
 墲	fjwhnf
+𪤗	fjwhnw
 觃	fjwhoj
 阌	fjwhpq
 坂	fjwhqy
@@ -49148,6 +49324,7 @@ sort: original
 壏	fjwjod
 尷	fjwjod
 夁	fjwjoh
+𫭼	fjwjpj
 堧	fjwjsd
 歾	fjwjud
 圽	fjwjuh
@@ -49176,6 +49353,7 @@ sort: original
 阗	fjwkkm
 殖	fjwkkq
 埴	fjwkkq
+𡎚	fjwklc
 埧	fjwkmf
 殂	fjwkqd
 坥	fjwkqh
@@ -49251,6 +49429,7 @@ sort: original
 阅	fjwmdh
 阐	fjwmfk
 殚	fjwmfk
+𫮃	fjwmfk
 阙	fjwmfl
 阄	fjwmfo
 塥	fjwmgh
@@ -49296,6 +49475,7 @@ sort: original
 灻	fjwnfh
 闬	fjwngm
 殓	fjwnhd
+𫭢	fjwnib
 埭	fjwnis
 殔	fjwnis
 坸	fjwnjh
@@ -49507,6 +49687,7 @@ sort: original
 瓸	fjwugb
 尳	fjwugy
 闩	fjwuhm
+𫭟	fjwuhq
 彀	fjwuil
 垉	fjwuis
 瓟	fjwuis
@@ -49558,6 +49739,7 @@ sort: original
 垑	fjwvvk
 址	fjwvwh
 辵	fjwvwl
+𪣻	fjwvyb
 墶	fjwwaa
 郌	fjwwda
 卦	fjwwfb
@@ -50150,6 +50332,7 @@ sort: original
 婎	fjyqib
 弩	fjyqig
 魋	fjyqig
+𫰛	fjyqjg
 努	fjyqjl
 嫷	fjyqkb
 邚	fjyqkb
@@ -50487,8 +50670,10 @@ sort: original
 鍓	fjzdpr
 误	fjzdus
 鋘	fjzdus
+𬤇	fjzdwh
 鈾	fjzdyj
 鍉	fjzfao
+𬤊	fjzfao
 鉮	fjzfas
 鏰	fjzfbb
 卞	fjzfbf
@@ -50681,6 +50866,7 @@ sort: original
 鑮	fjzjik
 褱	fjzjip
 鐶	fjzjip
+𫍽	fjzjip
 鐷	fjzjir
 銾	fjzjis
 鑖	fjzjjp
@@ -50719,6 +50905,7 @@ sort: original
 鍈	fjzjys
 銌	fjzkah
 鎪	fjzkaq
+𫍲	fjzkaq
 贿	fjzkbi
 銪	fjzkbi
 錑	fjzkcq
@@ -51007,6 +51194,7 @@ sort: original
 诧	fjzptq
 鍒	fjzptr
 贮	fjzpuh
+𬣞	fjzpuh
 鍕	fjzpuk
 鏔	fjzpum
 鑌	fjzpum
@@ -51057,6 +51245,7 @@ sort: original
 銃	fjzrhd
 鑻	fjzrht
 鍼	fjzriw
+𫍯	fjzriw
 鈢	fjzrlj
 錰	fjzrnf
 錸	fjzrnn
@@ -51169,6 +51358,7 @@ sort: original
 鏈	fjzufa
 鈍	fjzufc
 鏸	fjzufg
+𬤝	fjzufg
 鏄	fjzufk
 询	fjzufo
 鈣	fjzufo
@@ -51187,6 +51377,7 @@ sort: original
 銒	fjzukn
 釪	fjzuks
 銔	fjzuks
+𬣙	fjzuks
 鏪	fjzulf
 屔	fjzuli
 诓	fjzulw
@@ -51208,6 +51399,7 @@ sort: original
 赌	fjzuqb
 鍺	fjzuqj
 邱	fjzuqk
+𬶨	fjzuqv
 诸	fjzuqy
 槩	fjzurl
 购	fjzurs
@@ -51215,6 +51407,7 @@ sort: original
 鉃	fjzusj
 鉐	fjzusj
 贱	fjzutg
+𬣡	fjzutg
 頎	fjzutm
 顉	fjzutm
 乒	fjzutp
@@ -51243,6 +51436,7 @@ sort: original
 銘	fjzvdi
 鋪	fjzvfj
 鍶	fjzvgi
+𠅤	fjzvgi
 釚	fjzvjj
 赙	fjzvkd
 鎛	fjzvkd
@@ -51306,6 +51500,7 @@ sort: original
 鋊	fjzygj
 鏡	fjzyhd
 銅	fjzyiw
+𫍣	fjzyiw
 錪	fjzyjm
 鋼	fjzymf
 讷	fjzynr
@@ -51333,6 +51528,7 @@ sort: original
 鏲	fjzzfs
 鉉	fjzzfy
 銀	fjzzgj
+𬣳	fjzzgy
 斦	fjzzjj
 釿	fjzzjj
 鍂	fjzzjj
@@ -52251,7 +52447,7 @@ sort: original
 昹	fpi
 彶	fpj
 晥	fpo
-壑	fpu
+睿	fpu
 嵱	fpy
 巇	fqi
 岽	fqj
