瘆到首选，更改四二顶打法，qwp 开头的编码开头加上 p

--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -3211,8 +3211,8 @@ sort: original
 穇	crrw
 私	crs
 私	crsh
-䅟	crsw
 瘆	crsw
+䅟	crsw
 狘	crw
 狘	crwq
 凨	cry
@@ -32779,8 +32779,8 @@ sort: original
 瘮	fjcrrw
 穇	fjcrrw
 私	fjcrsh
-䅟	fjcrsw
 瘆	fjcrsw
+䅟	fjcrsw
 狘	fjcrwq
 秐	fjcryh
 凨	fjcryj
@@ -52063,7 +52063,7 @@ sort: original
 猍	crn
 狻	cro
 瘮	crr
-䅟	crs
+瘆	crs
 秐	cry
 禶	csh
 獳	csj
