蟑到三简，蠕到首选

--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -16933,9 +16933,9 @@ sort: original
 烗	nshf
 蛦	nsi
 蛦	nsig
-燸	nsj
-燸	nsjr
+蟑	nsj
 蠕	nsjr
+燸	nsjr
 蟑	nsjz
 燎	nsm
 蝒	nsmc
@@ -42319,8 +42319,8 @@ sort: original
 烍	fjnshd
 烗	fjnshf
 蛦	fjnsig
-燸	fjnsjr
 蠕	fjnsjr
+燸	fjnsjr
 蟑	fjnsjz
 蝒	fjnsmc
 燎	fjnsmj
@@ -53979,7 +53979,7 @@ sort: original
 爖	nsb
 爧	nsd
 烗	nsh
-蟑	nsj
+蠕	nsj
 蝒	nsm
 爣	nsv
 煃	nsw
