蝴放三简，蝴放首选

--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -16225,9 +16225,9 @@ sort: original
 㶲	ngy
 㶲	ngyf
 剑	nh
-煳	nhb
-煳	nhbi
+蝴	nhb
 蝴	nhbi
+煳	nhbi
 爏	nhc
 爏	nhcv
 佥	nhd
@@ -41818,8 +41818,8 @@ sort: original
 焷	fjngtk
 蜱	fjngtk
 㶲	fjngyf
-煳	fjnhbi
 蝴	fjnhbi
+煳	fjnhbi
 爏	fjnhcv
 灮	fjnhdf
 蜢	fjnhdm
