增加无理码，二简多重

--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -1172,7 +1172,7 @@ sort: original
 侫	awyb
 优	awyr
 低	ay
-如何	ay
+她们	ay
 ①	ay
 例如	ay
 羊	aya
@@ -9298,6 +9298,7 @@ sort: original
 渐	ihzj
 濢	ihzk
 已	ii
+比	ii
 旋	iia
 旋	iiao
 旍	iiap
@@ -12593,6 +12594,7 @@ sort: original
 啟	kdld
 酲	kdlw
 寸	kdp
+更	kf
 春	kf
 有时	kf
 醍	kfa
@@ -17449,8 +17451,9 @@ sort: original
 圆	odz
 圆	odzb
 筼	odzb
-飞	of
+者	of
 那是	of
+飞	of
 弗	ofa
 鞮	ofao
 帖	ofd
@@ -26524,7 +26527,7 @@ sort: original
 艪	vmvf
 赉	vmz
 赉	vmzb
-界	vn
+直	vn
 舴	vna
 舴	vnao
 貐	vnb
@@ -26593,6 +26596,7 @@ sort: original
 齗	vnnz
 齦	vnnz
 齭	vnnz
+界	vno
 畍	vno
 畍	vnod
 界	vnod
@@ -28131,7 +28135,7 @@ sort: original
 确	ya
 好像	ya
 ①	ya
-她们	ya
+如何	ya
 婿	yab
 妑	yabb
 婿	yabi
