蜒去三简，首选

--- a/lutai.dict.yaml
+++ b/lutai.dict.yaml
@@ -16838,10 +16838,10 @@ sort: original
 蠙	npum
 煊	npuu
 蝖	npuu
-焥	npv
+蜿	npv
 舖	npvf
-焥	npvi
 蜿	npvi
+焥	npvi
 蟛	npw
 蟛	npwl
 熔	npy
@@ -42264,8 +42264,8 @@ sort: original
 煊	fjnpuu
 蝖	fjnpuu
 舖	fjnpvf
-焥	fjnpvi
 蜿	fjnpvi
+焥	fjnpvi
 蟛	fjnpwl
 熔	fjnpyg
 嚮	fjnpzd
