--- a/lutaies.dict.yaml
+++ b/lutaies.dict.yaml
@@ -16602,10 +16602,10 @@ sort: original
 蠙	/npum	0
 煊	/npuu	305
 蝖	/npuu	0
-焥	np_v	0
+蜿	np_v	2350
 舖	/npvf	0
-焥	/npvi	0
 蜿	/npvi	2350
+焥	/npvi	0
 蟛	np_w	20
 蟛	/npwl	20
 熔	np_y	2664
@@ -50874,10 +50874,10 @@ sort: original
 蠙	;npum	0
 煊	;npuu	305
 蝖	;npuu	0
-焥	;npv	0
+蜿	;npv	2350
 舖	;npvf	0
-焥	;npvi	0
 蜿	;npvi	2350
+焥	;npvi	0
 蟛	;npw	20
 蟛	;npwl	20
 熔	;npy	2664
@@ -86012,10 +86012,10 @@ sort: original
 蠙	8npum
 煊	8npuu
 蝖	8npuu
-焥	8npv
+蜿	8npv
 舖	8npvf
-焥	8npvi
 蜿	8npvi
+焥	8npvi
 蟛	8npw
 蟛	8npwl
 熔	8npy
